[package]
name = "bear100"
version = "1.0.1"
edition = "2021"
authors = [
    "FssAy"
]

[[bin]]
name = "bear100"
path = "bear100/main.rs"

[dependencies]
serde_json = "1.0.85"
tracing = "0.1.36"
tracing-subscriber = "0.3.16"
ansi_term = "0.12.1"
libc = "0.2.138"
sysinfo = "0.27.0"

[dependencies.serde]
version = "1.0.145"
features = [
    "derive",
]

[profile.release]
opt-level = 3
codegen-units = 1
debug-assertions = false
lto = "yes"
panic = "abort"
rpath = false
strip = true
